--- a/01. Decathlon Latest Sale/scrape.ipynb
+++ b/01. Decathlon Latest Sale/scrape.ipynb
@@ -20,7 +20,6 @@
     "from selenium.webdriver.common.by import By\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "# importing time to make delays\n",
     "import time\n",
     "\n",
     "import requests\n",
@@ -84,7 +83,7 @@
    ],
    "source": [
     "url = \"https://www.decathlon.de/special-page/_/N-x6qfruZzB50HB\"\n",
-    "# --disabling browser popup notifications--\n",
+    "# disabling browser popup notifications\n",
     "options = Options()\n",
     "options.add_argument(\"--disable-notifications\")\n",
     "# to prevent from being spotted as a robot\n",
@@ -8691,7 +8690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
