--- a/02. Trader Joe Store Addresses/scrape with bs4, gspread.ipynb
+++ b/02. Trader Joe Store Addresses/scrape with bs4, gspread.ipynb
@@ -75,9 +75,7 @@
     "\n",
     "for i in itemlist:\n",
     "    link = i.find(\"a\").get(\"href\")\n",
-    "    llink1.append(link)\n",
-    "    state = i.find(\"a\").text\n",
-    "    lstate.append(state)"
+    "    llink1.append(link)"
    ]
   },
   {
@@ -102,9 +100,7 @@
     "    item = s.find_all(\"div\",{\"class\":\"itemlist\"})\n",
     "    for j in item:\n",
     "        link = j.find(\"a\").get(\"href\")\n",
-    "        llink2.append(link)\n",
-    "        city = j.find(\"a\").text\n",
-    "        lcity.append(city)"
+    "        llink2.append(link)"
    ]
   },
   {
